--- a/html/index.html
+++ b/html/index.html
@@ -1,25 +1,8 @@
 <!DOCTYPE html>
-<html>
-<head>
-<link rel="stylesheet" type="text/css" href="sif.css">
-<script src="http://ajax.aspnetcdn.com/ajax/jQuery/jquery-1.10.2.min.js"></script>
+<meta charset="utf-8">
+<link rel="stylesheet" href="sif.css">
+<script src="//ajax.aspnetcdn.com/ajax/jQuery/jquery-1.10.2.min.js"></script>
 <script src="sif.js"></script>
-</head>
-<body>
-<div id="main">
-<div id="unit_page">
-  <div class="status" id="hp">0</div>
-  <div class="status" id="smile">0</div>
-  <div class="status" id="pure">0</div>
-  <div class="status" id="cool">0</div>
-</div>
-<div id="member_page">
-  <div class="switch" id="previous_page"><img class="switch_img" id="img_previous" src="img/previous.png" onclick="switchPage(-1);" /></div>
-  <div id="member_list"></div>
-  <div class="switch" id="next_page"><img class="switch_img" id="img_next" src="img/next.png" onclick="switchPage(1);" /></div>
-</div>
-<div id="debug" style="position:absolute;right:0px;top:0px;z-index:10">debug</div>
-</div>
-</body>
-</html>
+<div id="main"></div>
+<div id="debug">debug</div>
 
